# mastodon-api-models

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
src/data/: lib.template.rs
src/data/models/: account.json  activity.json  admin.json  application.json  attachment.json  card.json  context.json  conversation.json  emoji.json  error.json  featured_tag.json  field.json  filter.json  history.json  identity_proof.json  instance.json  list.json  marker.json  mention.json  notification.json  poll.json  preferences.json  push_subscription.json  relationship.json  results.json  source.json  status.json  tag.json  token.json  visibility.json
